# lambda

./: .clang-format  .gitmodules  .kdev_include_paths  .travis.yml  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  COPYING.rst  INFO  LICENSE  LICENSE-BSD.rst  LICENSE.rst  README  README.md  README.rst  index.html  params.json
.github/workflows/: cancel.yml  ci.yml  ci_linux.yml  ci_macos.yml
src/: CMakeLists.txt  alph.hpp  bisulfite_scoring.hpp  evaluate_bisulfite_alignment.hpp  holder_tristate_overload.h  holders.hpp  index_sa_sort.h  lambda.cpp  lambda.hpp  lambda_indexer.cpp  lambda_indexer.hpp  lambda_indexer_misc.h  lambda_indexer_misc.hpp  match.hpp  misc.hpp  mkindex.cpp  mkindex.hpp  mkindex_algo.hpp  mkindex_misc.hpp  mkindex_options.hpp  mkindex_saca.hpp  options.hpp  output.hpp  radix_inplace.h  search.cpp  search.hpp  search_algo.hpp  search_datastructures.hpp  search_match.hpp  search_misc.hpp  search_options.hpp  search_output.hpp  seqan2_to_biocpp.hpp  seqan2seqan3.hpp  shared_definitions.hpp  shared_misc.hpp  shared_options.hpp  trans.hpp  view_add_reverse_complement.hpp  view_async_input_buffer.hpp  (+4 more)
stylesheets/: styles.css
test/: CMakeLists.txt
test/cli/: CMakeLists.txt  cli_test.hpp  index_test.cpp  search_test.cpp
test/cmake/: app_datasources.cmake
test/data/: datasources.cmake
tests/: CMakeLists.txt  db_nucl_fm.md5sums  db_nucl_sa.md5sums  db_prot_fm.md5sums  db_prot_sa.md5sums  maintests.sh
util/travis/: linux-cibuild.sh
